tests/ui/array-slice-vec/return-in-array-len.stderr
error[E0572]: return statement outside of function body
  --> $DIR/return-in-array-len.rs:7:13
   |
LL | / fn main() {
...  |
LL | |     |_: [_; return || {}]| {};
   | |             ^^^^^^^^^^^^ the return is part of this body...
...  |
LL | | }
   | |_- ...not the enclosing function body

error[E0572]: return statement outside of function body
  --> $DIR/return-in-array-len.rs:11:10
   |
LL | / fn main() {
...  |
LL | |     [(); return || {}];
   | |          ^^^^^^^^^^^^ the return is part of this body...
...  |
LL | | }
   | |_- ...not the enclosing function body

error[E0572]: return statement outside of function body
  --> $DIR/return-in-array-len.rs:15:10
   |
LL | / fn main() {
...  |
LL | |     [(); return |ice| {}];
   | |          ^^^^^^^^^^^^^^^ the return is part of this body...
...  |
LL | | }
   | |_- ...not the enclosing function body

error[E0572]: return statement outside of function body
  --> $DIR/return-in-array-len.rs:19:10
   |
LL | / fn main() {
...  |
LL | |     [(); return while let Some(n) = Some(0) {}];
   | |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the return is part of this body...
...  |
LL | | }
   | |_- ...not the enclosing function body

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0572`.
